--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ edition = "2018"
 rustface = "0.1.2"
 image = "0.21.0"
 imageproc = "0.18.0"
+actix-web = "1.0.0"
+actix-multipart = "0.1.1"
+env_logger = "0.6"
+futures = "0.1.25"
